Consolidated related classes into single files.
git-svn-id: svn://svn.code.sf.net/p/qttabbar/code/trunk@402 a528694c-761d-408f-aad8-18f83640fb98

--- a/Register/Register.vcxproj
+++ b/Register/Register.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{E35915FE-ED91-4AE5-B566-F269CD854498}</ProjectGuid>
     <RootNamespace>Register</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
