--- a/QTTabBar/QTTabBar.csproj
+++ b/QTTabBar/QTTabBar.csproj
@@ -150,6 +150,7 @@
     <Compile Include="OptionsDialog\Options01_Window.xaml.cs">
       <DependentUpon>Options01_Window.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PluginManager.cs" />
     <Compile Include="ShellContextMenu.cs" />
     <Compile Include="EditableHeader.xaml.cs">
       <DependentUpon>EditableHeader.xaml</DependentUpon>
@@ -195,19 +196,10 @@
     <Compile Include="Interop\IFolderViewOptions.cs" />
     <Compile Include="Interop\IUIAutomationGridPattern.cs" />
     <Compile Include="ShellBrowserEx.cs" />
-    <Compile Include="ContextMenuStripEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="CreateNewGroupForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DataGridViewEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="DataGridViewProgressBarCell.cs" />
-    <Compile Include="DataGridViewProgressBarColumn.cs" />
-    <Compile Include="DefaultMenuRenderer.cs" />
-    <Compile Include="DirectoryMenuItem.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DropDownMenuBase.cs">
@@ -219,18 +211,15 @@
     <Compile Include="DropDownMenuReorderable.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="EventPack.cs" />
     <Compile Include="ExtendedItemsView.cs" />
     <Compile Include="ExtendedSysListView32.cs" />
     <Compile Include="FileHashComputerForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FindFile.cs" />
-    <Compile Include="FormMethodInvoker.cs" />
-    <Compile Include="HashCalcStatus.cs" />
+    <Compile Include="Delegates.cs" />
     <Compile Include="IDLWrapper.cs" />
     <Compile Include="ImageReservationKey.cs" />
-    <Compile Include="ImageStrip.cs" />
     <Compile Include="InstanceManager.cs" />
     <Compile Include="Interop\BITMAPINFO.cs" />
     <Compile Include="Interop\BITMAPINFOHEADER.cs" />
@@ -309,50 +298,24 @@
     <Compile Include="Interop\WTS_THUMBNAILID.cs" />
     <Compile Include="Interop\_IDropTarget.cs" />
     <Compile Include="Interop\_ShellLinkObject.cs" />
-    <Compile Include="ItemRightClickedEventArgs.cs" />
-    <Compile Include="ItemRightClickedEventHandler.cs" />
+    <Compile Include="Events.cs" />
     <Compile Include="ListViewMonitor.cs" />
     <Compile Include="ExtendedListViewCommon.cs" />
-    <Compile Include="LogData.cs" />
-    <Compile Include="MC.cs" />
     <Compile Include="MemoForm.cs" />
-    <Compile Include="MenuGenre.cs" />
-    <Compile Include="MenuItemArguments.cs" />
     <Compile Include="MenuItemEx.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="MenuReorderedEventHandler.cs" />
-    <Compile Include="MenuTarget.cs" />
     <Compile Include="MenuUtility.cs" />
     <Compile Include="MessageForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NativeWindowController.cs" />
-    <Compile Include="NavigationCompleteCallback.cs" />
-    <Compile Include="PathData.cs" />
     <Compile Include="PathList.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PluginAssembly.cs" />
-    <Compile Include="PluginInfoHasOption.cs" />
-    <Compile Include="PluginInformation.cs" />
-    <Compile Include="PluginKey.cs" />
-    <Compile Include="PluginManager.cs" />
-    <Compile Include="PluginOptionEventArgs.cs" />
-    <Compile Include="PluginOptionEventHandler.cs" />
-    <Compile Include="PluginView.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="PluginViewItem.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QEventArgs.cs" />
-    <Compile Include="QEventHandler.cs" />
     <Compile Include="QMenuItem.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="QTabCancelEventArgs.cs" />
-    <Compile Include="QTabCancelEventHandler.cs" />
     <Compile Include="QTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -369,7 +332,6 @@
     </Compile>
     <Compile Include="QTUtility.cs" />
     <Compile Include="QTUtility2.cs" />
-    <Compile Include="StackDictionary%272.cs" />
     <Compile Include="SubDirTipForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -379,14 +341,7 @@
     <Compile Include="ThumbnailTooltipForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ToolbarRenderer.cs" />
-    <Compile Include="ToolStripEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ToolStripSearchBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ToolStripTrackBar.cs">
+    <Compile Include="ToolStripClasses.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TxtEnc.cs" />
@@ -395,10 +350,7 @@
     <Compile Include="UpDown.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="VistaMenuRenderer.cs" />
-    <Compile Include="WaitTimeoutCallback.cs" />
     <Compile Include="WindowUtils.cs" />
-    <Compile Include="XPMenuRenderer.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
