A few more consolidations.
git-svn-id: svn://svn.code.sf.net/p/qttabbar/code/trunk@403 a528694c-761d-408f-aad8-18f83640fb98

--- a/QTTabBar/QTTabBar.csproj
+++ b/QTTabBar/QTTabBar.csproj
@@ -101,9 +101,7 @@
   <ItemGroup>
     <Compile Include="AppsManager.cs" />
     <Compile Include="AutoLoader.cs" />
-    <Compile Include="Automation\AutomationElement.cs" />
-    <Compile Include="Automation\AutomationElementFactory.cs" />
-    <Compile Include="Automation\AutomationManager.cs" />
+    <Compile Include="AutomationClasses.cs" />
     <Compile Include="BreadcrumbBar.cs" />
     <Compile Include="AbstractListView.cs" />
     <Compile Include="Constants.cs" />
@@ -184,7 +182,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources_String.resx</DependentUpon>
     </Compile>
-    <Compile Include="SafePtr.cs" />
+    <Compile Include="MiscClasses.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Spinner.xaml.cs">
       <DependentUpon>Spinner.xaml</DependentUpon>
