--- a/QTTabBar/QTTabBar.csproj
+++ b/QTTabBar/QTTabBar.csproj
@@ -309,7 +309,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NativeWindowController.cs" />
-    <Compile Include="PathList.cs" />
+    <Compile Include="UniqueList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QMenuItem.cs">
       <SubType>Component</SubType>
