Figured out how to embed other Assemblies, so no need for the TreeView to be in a separate DLL anymore!
git-svn-id: svn://svn.code.sf.net/p/qttabbar/code/trunk@447 a528694c-761d-408f-aad8-18f83640fb98

--- a/QTTabBar/QTTabBar.csproj
+++ b/QTTabBar/QTTabBar.csproj
@@ -693,6 +693,9 @@
   <ItemGroup>
     <None Include="Resources\imgTabWindow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Ricciolo.Controls.TreeListView.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
